--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "doggo",
   "version": "0.1.0",
@@ -7,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "icons": "^1.0.0",
     "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
