--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "classnames": "^2.3.1",
     "icons": "^1.0.0",
     "leaflet": "^1.7.1",
+    "leaflet-geosearch": "^3.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-leaflet": "^3.2.1",
+    "react-leaflet-geosearch": "^0.3.4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
@@ -34,5 +36,8 @@
     ">0.2%",
     "not dead",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@types/leaflet-geosearch": "^3.0.0"
+  }
 }
