--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.4",
     "classnames": "^2.3.1",
+    "cuid": "^2.1.8",
     "icons": "^1.0.0",
     "leaflet": "^1.7.1",
     "leaflet-geosearch": "^3.5.0",
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.4.2",
     "react-icons": "^4.2.0",
     "react-leaflet": "^3.2.1",
     "react-leaflet-geosearch": "^0.3.4",
