--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "classnames": "^2.3.1",
     "icons": "^1.0.0",
     "leaflet": "^1.7.1",
+    "leaflet-control-geocoder": "^2.3.0",
     "leaflet-geosearch": "^3.5.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-leaflet": "^3.2.1",
