--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.4",
+    "bootstrap": "^5.1.1",
     "classnames": "^2.3.1",
     "cuid": "^2.1.8",
     "icons": "^1.0.0",
@@ -29,8 +30,10 @@
     "react-icons": "^4.2.0",
     "react-leaflet": "^3.2.1",
     "react-leaflet-geosearch": "^0.3.4",
+    "react-popup-alert": "^2.0.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "reactstrap": "^8.10.0",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
